# pagespeed

./: .env.example  Makefile  README.md  database.sql  docker-compose.postgresql.yml  pyproject.toml
src/: config.py  database.py  main.py  models.py
templates/: base.html  index.html  urls.html  urls2.html  urls_checks.html
